# rust-playground

./: CLAUDE.md  Cargo.toml  LEARNING_PLAN.md  README.md
exercises/week1/: 01_hello_world.rs  02_variables.rs  03_functions.rs  README.md
exercises/week1/control_flow/: Cargo.toml
exercises/week1/control_flow/src/: main.rs
exercises/week1/functions/: Cargo.toml
exercises/week1/functions/src/: lib.rs  main.rs  math_functions.rs
exercises/week1/functions/tests/: integration_test.rs
exercises/week1/hello_world/: Cargo.toml
exercises/week1/hello_world/src/: main.rs
exercises/week1/temperature_converter/: Cargo.toml
exercises/week1/temperature_converter/src/: main.rs
exercises/week1/variables/: Cargo.toml
exercises/week1/variables/src/: main.rs
exercises/week2/: 01_ownership_basics.rs  02_borrowing.rs  03_slices.rs  04_ownership_functions.rs  05_lifetimes_intro.rs  06_practical_ownership.rs  README.md
exercises/week2/borrowing/: Cargo.toml
exercises/week2/borrowing/src/: main.rs
exercises/week2/lifetimes_intro/: Cargo.toml
exercises/week2/lifetimes_intro/src/: main.rs
exercises/week2/ownership_basics/: Cargo.toml
exercises/week2/ownership_basics/src/: main.rs
exercises/week2/ownership_functions/: Cargo.toml
exercises/week2/ownership_functions/src/: main.rs
exercises/week2/practical_ownership/: Cargo.toml
exercises/week2/practical_ownership/src/: main.rs
exercises/week2/slices/: Cargo.toml
exercises/week3/custom_types/: Cargo.toml
exercises/week3/enums_basics/: Cargo.toml
exercises/week3/methods_impl/: Cargo.toml
exercises/week3/option_result/: Cargo.toml
exercises/week3/pattern_matching/: Cargo.toml
exercises/week3/structs_basics/: Cargo.toml
exercises/week4/generics/: Cargo.toml
exercises/week4/iterators_closures/: Cargo.toml
exercises/week4/modules_crates/: Cargo.toml
exercises/week4/smart_pointers/: Cargo.toml
exercises/week4/traits_basics/: Cargo.toml
exercises/week5/atomics/: Cargo.toml
exercises/week5/channels/: Cargo.toml
exercises/week5/concurrent_structures/: Cargo.toml
exercises/week5/shared_state/: Cargo.toml
exercises/week5/testing_concurrency/: Cargo.toml
exercises/week5/thread_basics/: Cargo.toml
notes/: concepts.md
projects/cli-app/: Cargo.toml
projects/web-api/: Cargo.toml
(+18 files in other folders)
