[workspace]
resolver = "2"
members = [ "exercises/week1/control_flow", "exercises/week1/functions","exercises/week1/hello_world", "exercises/week1/temperature_converter", "exercises/week1/variables", "exercises/week2/borrowing", "exercises/week2/lifetimes_intro", "exercises/week2/ownership_basics", "exercises/week2/ownership_functions", "exercises/week2/practical_ownership", "exercises/week2/slices", "projects/cli-app", "projects/web-api"]

[workspace.package]
edition = "2021"
authors = ["Your Name"]
rust-version = "1.70"

[workspace.dependencies]
# Common dependencies that exercises might use
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
