[workspace]
resolver = "2"
members = [ "exercises/week1/control_flow", "exercises/week1/functions","exercises/week1/hello_world", "exercises/week1/temperature_converter", "exercises/week1/variables", "exercises/week2/borrowing", "exercises/week2/lifetimes_intro", "exercises/week2/ownership_basics", "exercises/week2/ownership_functions", "exercises/week2/practical_ownership", "exercises/week2/slices", "exercises/week3/custom_types", "exercises/week3/enums_basics", "exercises/week3/methods_impl", "exercises/week3/option_result", "exercises/week3/pattern_matching", "exercises/week3/structs_basics", "exercises/week4/generics", "exercises/week4/iterators_closures", "exercises/week4/modules_crates", "exercises/week4/smart_pointers", "exercises/week4/traits_basics", "exercises/week5/atomics", "exercises/week5/channels", "exercises/week5/concurrent_structures", "exercises/week5/shared_state", "exercises/week5/testing_concurrency", "exercises/week5/thread_basics", "projects/cli-app", "projects/web-api"]

[workspace.package]
edition = "2021"
authors = ["Your Name"]
rust-version = "1.70"

[workspace.dependencies]
# Common dependencies that exercises might use
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
